--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Pomo - Pomodoro Timer</title>
+    <!-- Link to manifest.json for PWA capabilities -->
+    <link rel="manifest" href="/manifest.json">
     <!-- Tailwind CSS CDN with forms and container-queries plugins -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <!-- Inter font from Google Fonts -->
@@ -151,8 +153,6 @@
                         <span class="text-3xl font-bold text-[var(--text-primary)]">Pomo</span>
                     </div>
 
-                    <!-- Removed the audio information paragraph -->
-
                     <div class="flex flex-col items-center mb-6">
                         <label for="duration-select" class="text-[var(--text-secondary)] text-lg block mb-3">Choose Minutes:</label>
                         <select id="duration-select" class="w-48 p-3 text-center rounded-lg bg-[var(--background)] text-[var(--text-primary)] border border-[var(--text-secondary)] focus:outline-none focus:ring-2 focus:ring-[var(--accent-blue)] text-xl font-bold">
@@ -165,8 +165,6 @@
                             Set & Start Timer
                         </button>
                     </div>
-
-                    <!-- Removed the Test Sound button -->
                 </div>
 
                 <!-- Focus Timer Screen -->
